footer is fixed to bottom now, but not covering content

--- a/src/css/dateconverter.css
+++ b/src/css/dateconverter.css
@@ -1,6 +1,11 @@
 body {
     background-color: #159957;
     background-image: linear-gradient(90deg, #155799, #159957);
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
 /*
@@ -58,4 +63,17 @@ body {
     background-color: #fff;
     border-radius: 3px;
   }
+
+  .footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    width: 100%;
+  }
   
+  html {
+    height: 100%;
+    box-sizing: border-box;
+  }
